--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "main.js",
   "scripts": {
     "start": "electron .",
-    "package:mac": "electron-packager . Pad --platform=darwin --arch=universal --out=dist --overwrite"
+    "package:mac": "electron-packager . Pad --platform=darwin --arch=universal --out=dist --overwrite",
+    "package:win11": "electron-packager . Pad --platform=win32 --arch=x64 --out=dist --overwrite"
   },
   "devDependencies": {
     "@electron/packager": "^19.0.1",
